--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
     <!-- Canvas where users will draw -->
     <canvas id="pixelCanvas" width="320" height="320"></canvas>
 
+       <div id="colorPickerContainer">
+        <label for="colorPicker">Choose Color:</label>
+        <input type="color" id="colorPicker" value="#000000">
+    </div>
+
     <div>
         <button onclick="clearCanvas()">Clear Canvas</button>
         <button onclick="saveArt()">Save Art</button>
