--- a/templates/gallery.html
+++ b/templates/gallery.html
@@ -4,16 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gallery - Pixel Art Creator</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/gallstyle.css') }}">
 </head>
 <body>
     <h1>Gallery</h1>
     <div>
         {% for artwork in artworks %}
-            <div>
+            <div class="artwork-card">
                 <h3>{{ artwork['title'] }}</h3>
                 <img src="data:image/png;base64,{{ artwork['image'] }}" alt="{{ artwork['title'] }}" width="100">
                 <p>{{ artwork['description'] }}</p>
+
+                <button class="donwload-button">
                 <a href="{{ url_for('export_art', art_id=artwork['id']) }}">Download</a>
+                </button>
+
+                <!-- Delete button -->
+                <form action="{{ url_for('delete_art', art_id=artwork['id']) }}" method="POST" style="display:inline;">
+                    <button type="submit" class="delete-button">
+                        Delete
+                    </button>
+                </form>
             </div>
         {% endfor %}
     </div>
